--- a/Inference_on_an_image_with_YOLONAS.ipynb
+++ b/Inference_on_an_image_with_YOLONAS.ipynb
@@ -36,80 +36,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "rFn40GJSXCRJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 263,
-          "referenced_widgets": [
-            "217e7387e7a148859d53b1090e977193",
-            "705a950339684284813ce8961d36c122",
-            "d583f4c0672b4d4a989b2ba8f1702e57",
-            "ff41f8ca530d4f5581dc2f1802fc21e7",
-            "d1efc321150c428683e372c56d31282a",
-            "a20fbe6a68744ba1bb9c6290b8ca488a",
-            "b326089424b14baa8f40719e502c539f",
-            "bc38f6a00450434fbe2244382ac995cb",
-            "f20e62ae2a6a4e7a9f0fa850988b1a90",
-            "8853f8be691b42c0a53519e0f5423fa3",
-            "50b71bc9f0364aee990534175467b98d"
-          ]
-        },
-        "outputId": "492b0e04-278f-4ccc-eaac-ceb9a2ddad1f"
+        "id": "rFn40GJSXCRJ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[2023-05-09 22:59:46] INFO - crash_tips_setup.py - Crash tips is enabled. You can set your environment variable to CRASH_HANDLER=FALSE to disable it\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The console stream is logged into /root/sg_logs/console.log\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-            "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-            "[2023-05-09 22:59:54] WARNING - __init__.py - Failed to import pytorch_quantization\n",
-            "[2023-05-09 22:59:54] WARNING - calibrator.py - Failed to import pytorch_quantization\n",
-            "[2023-05-09 22:59:54] WARNING - export.py - Failed to import pytorch_quantization\n",
-            "[2023-05-09 22:59:54] WARNING - selective_quantization_utils.py - Failed to import pytorch_quantization\n",
-            "[2023-05-09 22:59:55] INFO - checkpoint_utils.py - License Notification: YOLO-NAS pre-trained weights are subjected to the specific license terms and conditions detailed in \n",
-            "https://github.com/Deci-AI/super-gradients/blob/master/LICENSE.YOLONAS.md\n",
-            "By downloading the pre-trained weight files you agree to comply with these terms.\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "  0%|          | 0.00/256M [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "217e7387e7a148859d53b1090e977193"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Downloading: \"https://sghub.deci.ai/models/yolo_nas_l_coco.pth\" to /root/.cache/torch/hub/checkpoints/yolo_nas_l_coco.pth\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from super_gradients.training import models\n",
         "\n",
@@ -124,23 +55,21 @@
       "source": [
         "## 🖼️ Inference on an image\n",
         "\n",
-        "Once the model has been instantiated all you have to do is call the `predict` method. \n",
+        "<img src='https://st.focusedcollection.com/16485780/i/650/focused_236040744-stock-photo-business-people-talking-conference-room.jpg'>\n",
         "\n",
-        "Let's perform inference on the following image:\n",
-        "\n",
-        "<img src='https://st.focusedcollection.com/16485780/i/650/focused_236040744-stock-photo-business-people-talking-conference-room.jpg'>\n"
+        "<img src='https://raw.githubusercontent.com/sanzioalb/misc/main/1682961586309.jpg'>\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "id": "iqXzphK6XXTF",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
         },
-        "outputId": "e555bb81-34ab-4938-ef0f-0140f4b9f8d6"
+        "outputId": "27040b41-913b-4880-b611-968a6232c89a"
       },
       "outputs": [
         {
@@ -171,9 +100,9 @@
           "height": 1000
         },
         "id": "UaQEZknMwMHj",
-        "outputId": "d97fc0aa-5488-4af3-fdd2-5af3c759e3ef"
+        "outputId": "a23c1543-6df1-40f4-afef-8ff14d21b95b"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -185,31 +114,6 @@
           },
           "metadata": {}
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "J64UkzV9XXb7"
-      },
-      "source": [
-        "### 🤷🏽‍♂️ What's happening \"under the hood\"\n",
-        "\n",
-        "1. Input image gets through the preprocessing pipeline, which includes image resizing, normalization and permute operation to convert input RGB image to torch tensor.\n",
-        "2. Model inference\n",
-        "3. Postprocessing of the detection results (Non-maximum suppression, resizing bounding boxes to the size of original image)\n",
-        "4. Visualization of the results (Rendering of bounding boxes on top of the image)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "P2WrTYvCXpt_"
-      },
-      "source": [
-        "### 💻 Inference via webcam\n",
-        "\n",
-        "Check [the documentation](https://github.com/Deci-AI/super-gradients/blob/505f646728249b9b35ea9060f34936f4e88234fd/src/super_gradients/examples/predict/detection_predict_streaming.py) for inference via webcam."
       ]
     }
   ],
@@ -227,352 +131,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "217e7387e7a148859d53b1090e977193": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_705a950339684284813ce8961d36c122",
-              "IPY_MODEL_d583f4c0672b4d4a989b2ba8f1702e57",
-              "IPY_MODEL_ff41f8ca530d4f5581dc2f1802fc21e7"
-            ],
-            "layout": "IPY_MODEL_d1efc321150c428683e372c56d31282a"
-          }
-        },
-        "705a950339684284813ce8961d36c122": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_a20fbe6a68744ba1bb9c6290b8ca488a",
-            "placeholder": "​",
-            "style": "IPY_MODEL_b326089424b14baa8f40719e502c539f",
-            "value": "100%"
-          }
-        },
-        "d583f4c0672b4d4a989b2ba8f1702e57": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "FloatProgressModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "ProgressView",
-            "bar_style": "success",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_bc38f6a00450434fbe2244382ac995cb",
-            "max": 268574352,
-            "min": 0,
-            "orientation": "horizontal",
-            "style": "IPY_MODEL_f20e62ae2a6a4e7a9f0fa850988b1a90",
-            "value": 268574352
-          }
-        },
-        "ff41f8ca530d4f5581dc2f1802fc21e7": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_8853f8be691b42c0a53519e0f5423fa3",
-            "placeholder": "​",
-            "style": "IPY_MODEL_50b71bc9f0364aee990534175467b98d",
-            "value": " 256M/256M [00:16&lt;00:00, 16.3MB/s]"
-          }
-        },
-        "d1efc321150c428683e372c56d31282a": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "a20fbe6a68744ba1bb9c6290b8ca488a": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "b326089424b14baa8f40719e502c539f": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
-        "bc38f6a00450434fbe2244382ac995cb": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "f20e62ae2a6a4e7a9f0fa850988b1a90": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ProgressStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "bar_color": null,
-            "description_width": ""
-          }
-        },
-        "8853f8be691b42c0a53519e0f5423fa3": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "50b71bc9f0364aee990534175467b98d": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        }
-      }
     }
   },
   "nbformat": 4,
